# bad-apple-turtle

./: .gitignore  LICENSE  README.md  bad_apple_turtle.py  bad_apple_vectorize.py  setup.cfg  vector_video.py  vector_video_decode.py  vector_video_encode.py
src/bad_apple_turtle/: __main__.py  bad_apple_turtle.py  vector_video.py
