[metadata]
name = bad-apple-turtle
version = 2.0.0b
author = Devan Plaga
author_email = legohavend@gmail.com
description = A script that converts videos into a format playable by a Python turtle.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CaptainD1/bad-apple-turtle
project_urls =
    Bug Tracker = https://github.com/CaptainD1/bad-apple-turtle/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires = opencv-python
python_requires = >=3.9

[options.entry_points]
console_scripts =
    bad-apple-turtle = bad_apple_turtle.bad_apple_turtle:main

[options.extras_require]
vlc = python-vlc

[options.packages.find]
where = src